0.7.1/_sources/gallery/image_depth.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/image_depth.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_image_depth.py>`
        to download the full example as a Python script or as a
        Jupyter notebook..

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_image_depth.py:


Image depth
===========

Display a 3D image and 3D points layer to show how napari handles depth.

The default blending for images is `translucent_no_depth`, which ignores depth and
always draws the layer on top of lower layers. Switching to `translucent` allows
objects in this layer to disappear behind objects in other layers depending
on the distance from the camera.

.. tags:: visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 14-38



.. image-sg:: /gallery/images/sphx_glr_image_depth_001.png
   :alt: image depth
   :srcset: /gallery/images/sphx_glr_image_depth_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    import numpy as np

    import napari

    im_data = np.zeros((50, 50, 50))
    im_data[30:40, 25:35, 25:35] = 1
    viewer = napari.Viewer()
    layer = viewer.add_image(im_data, colormap='magenta', rendering='iso', blending='translucent')
    viewer.add_image(im_data, colormap='green', rendering='iso', blending='translucent', translate=(30, 0, 0))

    points_data = [
        [50, 30, 30],
        [25, 30, 30],
        [75, 30, 30]
    ]
    viewer.add_points(points_data, size=4)

    viewer.dims.ndisplay = 3
    viewer.camera.angles = (0, -30, 10)
    viewer.fit_to_view()

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_image_depth.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: image_depth.ipynb <image_depth.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: image_depth.py <image_depth.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: image_depth.zip <image_depth.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
